# wikipedia-terminal

./: .gitignore  CONTRIBUTING.md  FIXES_APPLIED.md  LICENSE  QUICKSTART.md  README.md  cleanup.ps1  local_config.example.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
src/wikipedia_tui/: __init__.py  cli.py  fts_index.py  ui_curses.py  zim_access.py
tests/: test_history_navigation.py  test_ui.py  test_zim_access.py
tools/: build_fts_index.py
