[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wikipedia-terminal"
version = "0.1.0"
description = "Offline Wikipedia reader for the terminal with Fallout-style interface"
authors = [{name = "Rafael Chandane"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["wikipedia", "offline", "terminal", "cli", "zim", "kiwix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "zimply>=1.1.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
wiki = "wikipedia_tui.cli:main"

[project.urls]
Homepage = "https://github.com/rafaelchandane/wikipedia-terminal"
"Bug Tracker" = "https://github.com/rafaelchandane/wikipedia-terminal/issues"
Documentation = "https://github.com/rafaelchandane/wikipedia-terminal#readme"
"Source Code" = "https://github.com/rafaelchandane/wikipedia-terminal"
